# drf-recursive

./: README.md  pyproject.toml  setup.cfg
drf_recursive/: fields.py
