[metadata]
name = drf-recursive
version = 0.1.0
author = Kalinin Mitko
author_email = kalinin.mitko@gmail.com
description = Recursive Serialization for Django REST framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/null-none/drf-recursive
project_urls =
    Bug Tracker = https://github.com/null-none/drf-recursive/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = drf_recursive
packages = find:
python_requires = >=3.6

[options.packages.find]
where = drf_recursive